# django-oscar-es

./: .pylintrc  README.md  setup.cfg  setup.py
django_oscar_es/: admin.py  apps.py  cache.py  documents.py  es_fields.py  es_formatters.py  faceted_search.py  facets.py  form_fields.py  formatter_registry.py  forms.py  index.py  models.py  registry.py  search.py  settings.py  signal_receivers.py  urls.py  validator.py  views.py
django_oscar_es/dashboard/: forms.py  urls.py  views.py
django_oscar_es/formatters/: registry.py
django_oscar_es/migrations/: 0001_initial.py  0002_alter_productfacet_options_productfacet_order.py  0002_productfacet_size_and_more.py
django_oscar_es/static/django_oscar_es/js/: dashboard.js
django_oscar_es/templates/django_oscar_es/: browse.html  category.html  product_elasticsearch_settings.html  products.html  results.html
django_oscar_es/templates/django_oscar_es/dashboard/: product_elasticsearch_settings.html
django_oscar_es/templates/django_oscar_es/partials/: facets.html
