[metadata]
name = django-oscar-es
version = 0.1
description = An elasticsearch integration for django-oscar
long_description = file: README.md
url = https://github.com/joeyjurjens/django-oscar-es
author = Joey Jurjens
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
package_dir =
    = django_oscar_es
packages = find:
python_requires = >=3.8
install_requires =
    django-es-kit
    django-oscar

[options.extras_require]
test =
    pytest
    pytest-django
    pytest-cov
    testcontainers
dev =
    pylint
    pylint-django
    black

[options.packages.find]
where = src
